Fixed problem with not-clickable map area by removing z-index: -1 from css. Added event listener to for loop that creates marker array. Markers are now clickable

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 	width:100%;
 	height:100%;
 	position: absolute;
-	z-index: -1;
+	/*z-index: -1;*/
 }
 
 .filtered-list {
@@ -18,6 +18,7 @@ body {
 	background-color: #ccc;
 	list-style: none;
 	cursor: pointer;
+	z-index: 1;
 }
 
 .filter-buttons {
